# llvm

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: config-ix.cmake
cmake/modules/: GetTargetTriple.cmake
examples/: CMakeLists.txt
include/llvm/: AbstractTypeUser.h  Metadata.h  SymbolTableListTraits.h  Use.h
include/llvm/ADT/: APSInt.h  PointerUnion.h  STLExtras.h  StringExtras.h  StringMap.h
include/llvm/Analysis/: Dominators.h  LoopInfo.h
include/llvm/CodeGen/: ScheduleDAG.h  SelectionDAGNodes.h
include/llvm/MC/: MCInstrDesc.h
include/llvm/Support/: AlignOf.h  CFG.h  Capacity.h  CommandLine.h  DataTypes.h.cmake  DataTypes.h.in  RecyclingAllocator.h  SMLoc.h  Streams.h  ValueHandle.h
lib/: CMakeLists.txt
lib/Analysis/: CMakeLists.txt
lib/Analysis/IPA/: CMakeLists.txt
lib/Archive/: CMakeLists.txt
lib/AsmParser/: CMakeLists.txt
lib/Bitcode/Reader/: CMakeLists.txt
lib/Bitcode/Writer/: CMakeLists.txt
lib/CodeGen/: CMakeLists.txt  RegAllocGreedy.cpp
lib/CodeGen/AsmPrinter/: CMakeLists.txt
lib/CodeGen/SelectionDAG/: CMakeLists.txt
lib/CompilerDriver/: CMakeLists.txt
lib/Debugger/: CMakeLists.txt
lib/ExecutionEngine/: CMakeLists.txt
lib/ExecutionEngine/Interpreter/: CMakeLists.txt
lib/ExecutionEngine/JIT/: CMakeLists.txt
lib/Linker/: CMakeLists.txt
lib/MC/: CMakeLists.txt  WinCOFFObjectWriter.cpp
lib/Support/: APInt.cpp  CMakeLists.txt  CommandLine.cpp  ConstantRange.cpp  TargetRegistry.cpp  TargetRegistry.cpp_unfinish
lib/System/: CMakeLists.txt
lib/VMCore/: AsmWriter.cpp  Attributes.cpp  BasicBlock.cpp  CMakeLists.txt  Constants.cpp  ConstantsContext.h  Dominators.cpp  Function.cpp  LLVMContextImpl.h  LeakDetector.cpp  Module.cpp  TypesContext.h
runtime/libprofile/: BasicBlockTracing.c  CommonProfiling.c  Profiling.h
tools/: CMakeLists.txt
tools/bugpoint/: ToolRunner.cpp
tools/llvm-nm/: llvm-nm.cpp
tools/llvm-objdump/: llvm-objdump.cpp
utils/TableGen/: AsmMatcherEmitter.cpp  CMakeLists.txt  CodeGenDAGPatterns.cpp  FastISelEmitter.cpp  InstrInfoEmitter.cpp
